# Ejercicio-banco-de-sangre

./: CMakeLists.txt  Donante.cpp  Donante.h  LinkedList.cpp  LinkedList.h  Persona.cpp  Persona.h  README.md  Receptor.cpp  Receptor.h  Validacion.cpp  Validacion.h  main.cpp
